--- a/settings.json
+++ b/settings.json
@@ -1,2 +1,48 @@
 {
+    // EDITOR
+    "editor.minimap.enabled": false,
+    "editor.lineNumbers": "relative", 
+    "editor.matchBrackets": "never",
+
+    // VIM - GENERAL
+    "vim.useSystemClipboard": true,
+    "vim.leader": "<Space>",
+    "vim.hlsearch": true,
+    "vim.handleKeys": {
+	    "<C-p>": false
+    },
+
+    // VIM NORMAL MODE
+    "vim.normalModeKeyBindingsNonRecursive": [
+        // switch between tabs
+        { "before": ["<S-h>"], "commands": [":bprevious"] },
+        { "before": ["<S-l>"], "commands": [":bnext"] },
+
+        // splits
+        { "before": ["leader", "v"], "commands": [":vsplit"] },
+        { "before": ["leader", "s"], "commands": [":split"] },
+
+        // panes
+        { "before": ["leader", "h"], "commands": ["workbench.action.focusLeftGroup"] },
+        { "before": ["leader", "j"], "commands": ["workbench.action.focusBelowGroup"] },
+        { "before": ["leader", "k"], "commands": ["workbench.action.focusAboveGroup"] },
+        { "before": ["leader", "l"], "commands": ["workbench.action.focusRightGroup"] }
+    ], 
+    
+    // VIN INSERT MODE
+    "vim.insertModeKeyBindings": [
+        { "before": [ "j", "j"], "after": ["<Esc>"]}
+    ],
+
+    // VIM VISUAL MODE
+    "vim.visualModeKeyBindings": [
+        // Stay in visual mode while indenting
+        { "before": ["<"], "commands": ["editor.action.outdentLines"] },
+        { "before": [">"], "commands": ["editor.action.indentLines"] },
+        // Move selected lines while staying in visual mode
+        { "before": ["J"], "commands": ["editor.action.moveLinesDownAction"] },
+        { "before": ["K"], "commands": ["editor.action.moveLinesUpAction"] },
+        // toggle comment selection
+        { "before": ["leader", "c"], "commands": ["editor.action.commentLine"] }
+    ],
 }
